--- a/branches/sven/report/templates/Protokoll.jrxml
+++ b/branches/sven/report/templates/Protokoll.jrxml
@@ -25,6 +25,7 @@
 	<field name="Wiedervorlagedatum" class="java.lang.String"/>
 	<field name="Verantwortliche" class="java.lang.String"/>
 	<field name="Beteiligte" class="java.lang.String"/>
+	<field name="Ueberschrift" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -160,7 +161,7 @@
 				</graphicElement>
 			</line>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField-5" positionType="Float" stretchType="RelativeToBandHeight" x="5" y="106" width="258" height="39"/>
+				<reportElement key="textField-5" positionType="Float" stretchType="RelativeToBandHeight" x="5" y="106" width="258" height="107"/>
 				<box leftPadding="2">
 					<topPen lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineStyle="Solid" lineColor="#000000"/>
@@ -259,12 +260,12 @@
 		<band height="19" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="229" splitType="Stretch">
+		<band height="250" splitType="Stretch">
 			<rectangle>
-				<reportElement key="rectangle-1" positionType="Float" stretchType="RelativeToBandHeight" mode="Transparent" x="0" y="7" width="534" height="214"/>
+				<reportElement key="rectangle-1" positionType="Float" stretchType="RelativeToBandHeight" mode="Transparent" x="0" y="7" width="534" height="235"/>
 			</rectangle>
 			<staticText>
-				<reportElement key="staticText-9" x="5" y="13" width="123" height="17"/>
+				<reportElement key="staticText-9" x="5" y="34" width="123" height="17"/>
 				<box>
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -277,7 +278,7 @@
 				<text><![CDATA[Kategorie:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-10" x="131" y="13" width="123" height="17"/>
+				<reportElement key="staticText-10" x="131" y="34" width="123" height="17"/>
 				<box>
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -290,7 +291,7 @@
 				<text><![CDATA[Bereich:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField-7" x="5" y="30" width="123" height="20"/>
+				<reportElement key="textField-7" x="5" y="51" width="123" height="20"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -303,7 +304,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Kategorie}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField-8" x="131" y="30" width="123" height="20"/>
+				<reportElement key="textField-8" x="131" y="51" width="123" height="20"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -316,7 +317,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Bereich}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField-9" x="257" y="30" width="144" height="20"/>
+				<reportElement key="textField-9" x="257" y="51" width="144" height="20"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -329,7 +330,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Institution}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField-10" x="405" y="30" width="123" height="20"/>
+				<reportElement key="textField-10" x="405" y="51" width="123" height="20"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -342,7 +343,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Status}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-11" x="257" y="13" width="144" height="17"/>
+				<reportElement key="staticText-11" x="257" y="34" width="144" height="17"/>
 				<box>
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -355,7 +356,7 @@
 				<text><![CDATA[Institution:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-12" x="405" y="13" width="123" height="17"/>
+				<reportElement key="staticText-12" x="405" y="34" width="123" height="17"/>
 				<box>
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -368,7 +369,7 @@
 				<text><![CDATA[Status:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-13" x="5" y="56" width="396" height="17"/>
+				<reportElement key="staticText-13" x="5" y="77" width="396" height="17"/>
 				<box>
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -381,7 +382,7 @@
 				<text><![CDATA[Thema:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField-11" x="5" y="73" width="396" height="20"/>
+				<reportElement key="textField-11" x="5" y="94" width="396" height="20"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -394,7 +395,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Thema}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField-12" positionType="Float" stretchType="RelativeToTallestObject" x="5" y="159" width="522" height="55" isPrintWhenDetailOverflows="true"/>
+				<reportElement key="textField-12" positionType="Float" stretchType="RelativeToTallestObject" x="5" y="180" width="522" height="55" isPrintWhenDetailOverflows="true"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -407,7 +408,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Inhalt}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-14" positionType="Float" x="5" y="142" width="522" height="17" isPrintWhenDetailOverflows="true"/>
+				<reportElement key="staticText-14" positionType="Float" x="5" y="163" width="522" height="17" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -420,7 +421,7 @@
 				<text><![CDATA[Inhalt:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-15" x="405" y="56" width="123" height="17"/>
+				<reportElement key="staticText-15" x="405" y="77" width="123" height="17"/>
 				<box>
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -433,7 +434,7 @@
 				<text><![CDATA[Wiedervorlage:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField-13" x="405" y="73" width="123" height="20"/>
+				<reportElement key="textField-13" x="405" y="94" width="123" height="20"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -446,7 +447,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Wiedervorlagedatum}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-16" positionType="Float" x="5" y="99" width="253" height="17"/>
+				<reportElement key="staticText-16" positionType="Float" x="5" y="120" width="253" height="17"/>
 				<box>
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -459,7 +460,7 @@
 				<text><![CDATA[Verantwortliche/r:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField-14" positionType="Float" x="5" y="116" width="253" height="20"/>
+				<reportElement key="textField-14" positionType="Float" x="5" y="137" width="253" height="20"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -472,7 +473,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Verantwortliche}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-17" positionType="Float" x="275" y="98" width="253" height="17"/>
+				<reportElement key="staticText-17" positionType="Float" x="275" y="119" width="253" height="17"/>
 				<box>
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -485,7 +486,7 @@
 				<text><![CDATA[Beteiligte/r:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField-15" positionType="Float" x="275" y="115" width="253" height="20"/>
+				<reportElement key="textField-15" positionType="Float" x="275" y="136" width="253" height="20"/>
 				<box leftPadding="2">
 					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
@@ -496,6 +497,13 @@
 					<font fontName="Tahoma" size="11"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Beteiligte}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="6" y="11" width="521" height="20"/>
+				<textElement>
+					<font size="14" isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{Ueberschrift}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
