Einige Klassen refactored, neue und besser lesbare Variablenname vergeben, OR-Mapper entschlackt und um weitere Funktionen erweitert, neue Gruppierungsfunktion mit Basismethoden und OR-Annotations eingebaut, Datenbank erweitert und Mitarbeiter-Daten intern verknüpft

--- a/branches/sven/src/ToDo/dialog/TodoNoteDialog.form
+++ b/branches/sven/src/ToDo/dialog/TodoNoteDialog.form
@@ -36,8 +36,8 @@
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="jComboBox1" max="32767" attributes="1"/>
-                                  <Component id="jCalendarComboBox1" alignment="0" pref="187" max="32767" attributes="1"/>
+                                  <Component id="jComboBoxUser" max="32767" attributes="1"/>
+                                  <Component id="jCalendarComboBoxDate" alignment="0" pref="187" max="32767" attributes="1"/>
                               </Group>
                           </Group>
                           <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -61,13 +61,13 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="jCalendarComboBox1" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Component id="jCalendarComboBoxDate" alignment="1" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jComboBox1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jComboBoxUser" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
@@ -86,14 +86,14 @@
         <Property name="text" type="java.lang.String" value="Zeitpunkt der Erledigung:"/>
       </Properties>
     </Component>
-    <Component class="de.wannawork.jcalendar.JCalendarComboBox" name="jCalendarComboBox1">
+    <Component class="de.wannawork.jcalendar.JCalendarComboBox" name="jCalendarComboBoxDate">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
         <Property name="text" type="java.lang.String" value="Erledigt von:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JComboBox" name="jComboBox1">
+    <Component class="javax.swing.JComboBox" name="jComboBoxUser">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="0"/>
@@ -112,7 +112,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTextArea" name="jTextArea1">
+        <Component class="javax.swing.JTextArea" name="jTextAreaNote">
           <Properties>
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
