--- a/branches/sven/src/ToDo/subgui/TodoSubGUI.form
+++ b/branches/sven/src/ToDo/subgui/TodoSubGUI.form
@@ -468,6 +468,7 @@
             <Component class="javax.swing.JTextArea" name="jTextAreaContent">
               <Properties>
                 <Property name="columns" type="int" value="20"/>
+                <Property name="lineWrap" type="boolean" value="true"/>
                 <Property name="rows" type="int" value="5"/>
               </Properties>
             </Component>
